--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
 <html> 
-    
+    <head>
+        <title></title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <header>
+            <nav class="barra_nav"></nav>
+        </header>
+        <main>
+            <h2 id="ingrese_art">INGRESE ARTISTA FAVORITO</h2>
+            <form></form>
+            <article class="tarj_art">
+                
+            </article>
+        </main>
+    </body>
 </html>
