--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
         </header>
         <main>
             <h2 id="ingrese_art">INGRESE ARTISTA FAVORITO</h2>
-            <form></form>
+            <form>
+                <input type="text" id="busqueda" name="busqueda">
+            </form>
             <article class="tarj_art">
-                
+                <p>artista 1</p>
+            </article>
+            <article class="tarj_art">
+                <p>artista 2</p>
+            </article>
+            <article class="tarj_art">
+                <p>artista 3</p>
             </article>
         </main>
     </body>
