--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 </form>    
             </article>
             
+            <p>aaa</p>
             <article id="zona_tarj">
                 <section class="tarj_art">
                     <p>artista 1</p>
