--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
     <head>
         <title></title>
         <link rel="stylesheet" href="styles.css">
+        <!--Google font para fuente Raleway-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body id="body_index">
-        <header>
+        <header id="header_index">
             <nav class = "topnav">
-            <a class="topnav_icon" href="index.html">Icono</a>
-            <a class="topnav_icon active" href="index.html">Home</a>
-            <a class="topnav_icon" href="#Playlist">News</a>
-            <a class="topnav_icon" href="#Contatos">Contact</a>
-            <a class="topnav_icon" href="#Sobre nosotros">About</a>
+            <a class="topnav_icon active" href="index.html">Recomendacion</a>
             </nav>
         </header>
 
         <main>
             <article id="buscador">
-                <h2 id="ingrese" style="color: white;">INGRESE ARTISTA FAVORITO</h2>
+                <h1 id="ingrese" style="color: white;">INGRESE ARTISTA FAVORITO</h1>
                 <form>
                     <input type="text" id="busqueda">
                 </form>  
