--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html> 
     <head>
-        <title></title>
+        <title>Dynomo</title>
         <link rel="stylesheet" href="styles.css">
         <!--Google font para fuente Raleway-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,7 @@
             <section id="buscador">
                 <h1 id="ingrese">INGRESE ARTISTA FAVORITO</h1>
                 <form>
-                    <input type="text" id="busqueda">
+                    <input type="text" id="busqueda" placeholder="Buscar artista">
                 </form>  
             </section>
             
