--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
 
                 <div class="tarj_art">
-                    <p>Radiohead</p>
+                    <p>Radioheadaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
                     <img src="imagenes/Radiohead.jpg" alt="taulor">
                 </div>
 
