--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&display=swap" rel="stylesheet">
+
     </head>
     <body id="body_index">
         <header id="header_index">
@@ -32,11 +36,13 @@
             </section>
             
             <section id="zona_tarj">
+                <a href="index-artista.html" class="link_artista">
                 <div class="tarj_art">
+                    
                     <p>Taylor Swift</p>
                     <img src="imagenes/taylor.jpg" alt="taulor">
                 </div>
-
+                </a>
                 <div class="tarj_art">
                     <p>Radiohead</p>
                     <img src="imagenes/Radiohead.jpg" alt="taulor">
