--- a/index-artista.html
+++ b/index-artista.html
@@ -22,11 +22,11 @@
                     <article id="zona_tarj">
                         <article class="tarj_art">
                             <p>Taylor Swift</p>
-                            <img src="imagenes/taylor.jpg" alt="taulor">
+                            <img src="imagenes/taylor.jpg" alt="taylor swift">
                         </article>
                         <article class="tarj_art">
                             <p>Sabrina Carpenter</p>
-                            <img src="imagenes/taylor.jpg" alt="taulor">
+                            <img src="imagenes/sabrina.png" alt="sabrina carpenter">
                         </article>
                     </article>
                 </article>
@@ -36,11 +36,11 @@
                     <article id="zona_tarj">
                         <article class="tarj_art">
                             <p>Radiohead</p>
-                            <img src="imagenes/Radiohead.jpg" alt="taulor">
+                            <img src="imagenes/Radiohead.jpg" alt="radiohaed">
                         </article>
                         <article class="tarj_art">
                             <p>Arctic Monkeys</p>
-                            <img src="imagenes/arcticmonkeys.jpg" alt="taulor">
+                            <img src="imagenes/arcticmonkeys.jpg" alt="arctic monkeys">
                         </article>
                     </article>
                 </article>
@@ -51,11 +51,11 @@
                     <article id="zona_tarj">
                         <article class="tarj_art">
                             <p>Sex Pistols</p>
-                            <img src="imagenes/Radiohead.jpg" alt="taulor">
+                            <img src="imagenes/sexpistols.jpg" alt="sex pistols">
                         </article>
                         <article class="tarj_art">
                             <p>Ramones</p>
-                            <img src="imagenes/arcticmonkeys.jpg" alt="taulor">
+                            <img src="imagenes/ramones.jpg" alt="ramones">
                         </article>
                     </article>
                 </article>
