--- a/index-artista.html
+++ b/index-artista.html
@@ -11,10 +11,10 @@
     <body id="body_index">
         <header>
             <nav class = "topnav">
-            <a class="topnav_icon active" href="index.html">Recomendacion</a>
+            <a class="topnav_icon" href="index.html">Recomendacion</a>
             </nav>
         </header>
-        <br>
+        <div class="separar"></div>
         <main>
             <section id="zona_gen">
                 <article class="tarj_gen">
@@ -30,7 +30,7 @@
                         </article>
                     </article>
                 </article>
-<br>
+                <div class="separar"></div>
                 <article class="tarj_gen">
                     <h2>ROCK ALTERNATIVO</h2>
                     <article id="zona_tarj">
@@ -45,7 +45,7 @@
                     </article>
                 </article>
 
-<br>
+                <div class="separar"></div>
                 <article class="tarj_gen">
                     <h2>PUNK ROCK</h2>
                     <article id="zona_tarj">
