--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </section>
             
             <section id="zona_tarj">
-                <a href="index-artista.html" class="link_artista">
+                <!--<a href="index-artista.html" class="link_artista">
                 <div class="tarj_art">
                     <p>Taylor Swift</p>
                     <img src="imagenes/taylor.jpg" alt="taulor">
@@ -50,7 +50,7 @@
                 <div class="tarj_art">
                     <p>Arctic Monkeys</p>
                     <img src="imagenes/arcticmonkeys.jpg" alt="taulor">
-                </div>
+                </div>-->
             </section>
 
         </main>
