--- a/index.html
+++ b/index.html
@@ -36,21 +36,7 @@
             </section>
             
             <section id="zona_tarj">
-                <!--<a href="index-artista.html" class="link_artista">
-                <div class="tarj_art">
-                    <p>Taylor Swift</p>
-                    <img src="imagenes/taylor.jpg" alt="taulor">
-                </div></a>
-                
-                <div class="tarj_art">
-                    <p>Radiohead</p>
-                    <img src="imagenes/Radiohead.jpg" alt="taulor">
-                </div>
-
-                <div class="tarj_art">
-                    <p>Arctic Monkeys</p>
-                    <img src="imagenes/arcticmonkeys.jpg" alt="taulor">
-                </div>-->
+                <!-- Se generan las tarjetas de artistas dinamicamente -->
             </section>
 
         </main>
