--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <section id="buscador">
                 <h1 id="ingrese">INGRESE ARTISTA FAVORITO</h1>
                 <form>
-                    <input type="text" id="busqueda" placeholder="Buscar artista">
+                    <input type="text" id="busqueda" placeholder="Buscar artista" autocomplete="off">
                 </form>  
             </section>
             
