index-artista dinamico pero se ve feo

--- a/index-artista.html
+++ b/index-artista.html
@@ -1,6 +1,6 @@
 <html> 
     <head>
-<title></title>
+        <title></title>
         <link rel="stylesheet" href="styles-artista.css">
         <link rel="stylesheet" href="styles.css">
         <!--Google font para fuente Raleway-->
@@ -8,58 +8,20 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
+
     <body id="body_index">
+
         <header>
             <nav class = "topnav">
             <a class="topnav_icon" href="index.html">Recomendacion</a>
             </nav>
         </header>
-        <div class="separar"></div>
-        <main>
-            <section id="zona_gen">
-                <article class="tarj_gen">
-                    <h2>POP</h2>
-                    <article id="zona_tarj">
-                        <article class="tarj_art">
-                            <p>Taylor Swift</p>
-                            <img src="imagenes/taylor.jpg" alt="taylor swift">
-                        </article>
-                        <article class="tarj_art">
-                            <p>Sabrina Carpenter</p>
-                            <img src="imagenes/sabrina.png" alt="sabrina carpenter">
-                        </article>
-                    </article>
-                </article>
-                <div class="separar"></div>
-                <article class="tarj_gen">
-                    <h2>ROCK ALTERNATIVO</h2>
-                    <article id="zona_tarj">
-                        <article class="tarj_art">
-                            <p>Radiohead</p>
-                            <img src="imagenes/Radiohead.jpg" alt="radiohaed">
-                        </article>
-                        <article class="tarj_art">
-                            <p>Arctic Monkeys</p>
-                            <img src="imagenes/arcticmonkeys.jpg" alt="arctic monkeys">
-                        </article>
-                    </article>
-                </article>
 
-                <div class="separar"></div>
-                <article class="tarj_gen">
-                    <h2>PUNK ROCK</h2>
-                    <article id="zona_tarj">
-                        <article class="tarj_art">
-                            <p>Sex Pistols</p>
-                            <img src="imagenes/sexpistols.jpg" alt="sex pistols">
-                        </article>
-                        <article class="tarj_art">
-                            <p>Ramones</p>
-                            <img src="imagenes/ramones.jpg" alt="ramones">
-                        </article>
-                    </article>
-                </article>
-            </section>
+        <div class="separar"></div>
+
+        <main>
+            
         </main>
+        <script src="crear-index-artista.js"></script>
     </body>
 </html>
