--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
             </section>
 
         </main>
-        <script src="script.js"></script>
+        <script src="crear-tarjs-busqueda.js"></script>
     </body>
 </html>
