comente y intente arreglar el styels-artista(no pude)

--- a/index-artista.html
+++ b/index-artista.html
@@ -20,7 +20,7 @@
         <div class="separar"></div>
 
         <main>
-            
+            <!--Se generan las tarjetas de genero dinamicamente-->
         </main>
         <script src="crear-index-artista.js"></script>
     </body>
