--- a/public/html/index-artista.html
+++ b/public/html/index-artista.html
@@ -1,7 +1,7 @@
 <html> 
     <head>
-        <link rel="stylesheet" href="styles-artista.css">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../css/styles-artista.css">
+        <link rel="stylesheet" href="../css/styles.css">
         <!--Google font para fuente Raleway-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,6 +21,6 @@
         <main>
             <!--Se generan las tarjetas de genero dinamicamente-->
         </main>
-        <script src="crear-index-artista.js"></script>
+        <script src="js/crear-index-artista.js"></script>
     </body>
 </html>
