--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,7 +1,7 @@
 <html> 
     <head>
         <title>Dynomo</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
         <!--Google font para fuente Raleway-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,6 +40,6 @@
             </section>
 
         </main>
-        <script src="crear-tarjs-busqueda.js"></script>
+        <script src="js/crear-tarjs-busqueda.js"></script>
     </body>
 </html>
