Quedaron reorganizadas las rutas a partir de /api/artista, por lo que se intento jerarquizar  el proyecto para que queda mas prolijo, eso genero problemas con las rutas las cuales fueron corregidas, pero pueden en el futuro seguir surgiendo. se seapararon las rutas y las funciones (carpeta controllers) para mantener organizado el proyecto

--- a/public/html/index-artista.html
+++ b/public/html/index-artista.html
@@ -1,7 +1,7 @@
 <html> 
     <head>
-        <link rel="stylesheet" href="../css/styles-artista.css">
-        <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="/css/styles-artista.css">
+        <link rel="stylesheet" href="/css/styles.css">
         <!--Google font para fuente Raleway-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
         
         <header>
             <nav class = "topnav">
-                <a class="topnav_icon" href="index.html">Recomendacion</a>
+                <a class="topnav_icon" href="/html/index.html">Recomendacion</a>
             </nav>
         </header>
         
@@ -26,6 +26,6 @@
         <main>
             <!--Se generan las tarjetas de genero dinamicamente-->
         </main>
-        <script src="js/crear-index-artista.js"></script>
+        <script src="/js/crear-index-artista.js"></script>
     </body>
 </html>
