--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,7 +1,7 @@
 <html> 
     <head>
         <title>Dynomo</title>
-        <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="/css/styles.css">
         <!--Google font para fuente Raleway-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
