Se agrego un metodo POST para el entregable, se creo un formulario en forma de test para ver como se utiliza el POST.

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -20,6 +20,7 @@
                 <!--  Espacio  -->
                 
                 <div style="display: flex;gap: 20px; ">
+                    <a class="topnav_icon" href="/html/formulario-artista.html">Registra Artista</a>
                     <a class="topnav_icon" href="index.html">Recomendacion</a>
                     <a class="topnav_icon" href="index.html">test</a>
                     <a class="topnav_icon" href="index.html">otro</a>
