Se cambio el post de api/artista/crearArtista por api/artista

--- a/public/html/formulario-artista.html
+++ b/public/html/formulario-artista.html
@@ -17,7 +17,7 @@
         </header>
         <h1 class = "titulo_artista" >Registrar un artista emergente</h1>
 
-        <form class = "formulario" action = "/api/artista/crearArtista" method = "POST">
+        <form class = "formulario" action = "/api/artista" method = "POST">
             <input type="text" name="nombre" placeholder="Nombre del artista" required><br>
             <input type="text" name="genero" placeholder="Genero musical" required><br> 
             <input type="file" name="imagen" placeholder="Imagen del artista" required><br>
